--- a/LZY.Application/LZY.Application.csproj
+++ b/LZY.Application/LZY.Application.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="X.PagedList.Mvc.Core" Version="7.6.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\LZY.Repository\LZY.Repository.csproj" />
   </ItemGroup>
 
