--- a/LZY.Data/LZY.Data.csproj
+++ b/LZY.Data/LZY.Data.csproj
@@ -7,6 +7,7 @@
   <ItemGroup>
     <PackageReference Include="microsoft.EntityFrameworkCore" Version="2.1.4" />
     <PackageReference Include="microsoft.EntityFrameworkCore.SqlServer" Version="2.1.4" />
+    <PackageReference Include="X.PagedList.Mvc.Core" Version="7.6.0" />
   </ItemGroup>
 
   <ItemGroup>
