初步使用Ajax设置

--- a/LZY.SimpleAdmin/appsettings.Development.json
+++ b/LZY.SimpleAdmin/appsettings.Development.json
@@ -3,6 +3,7 @@
     "LZYDbContext": "Server=47.92.109.206;Database=LZYDbCore;uid=sa;pwd=sa1234;"
   },
   "appSettings": {
+    "PageSize": 10,
     "LoginProvider": "Session", //登陆提供者模式：Session、Cookie
     "IsLog": "true", //启用系统日志
     "CommandTimeout": "180", //数据库超时间
