--- a/LZY.SimpleAdmin/LZY.SimpleAdmin.csproj
+++ b/LZY.SimpleAdmin/LZY.SimpleAdmin.csproj
@@ -8,6 +8,7 @@
     <PackageReference Include="AspNetCorePage" Version="1.0.1" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.1.2" PrivateAssets="All" />
+    <PackageReference Include="Microsoft.jQuery.Unobtrusive.Ajax" Version="3.2.6" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.1.1" />
   </ItemGroup>
 
